# MetaNN_Cmake

./: CMakeLists.txt  README.md
MetaNN/: MetaNN.project
Tests/DataOpTest/: DataOpTest.mk  DataOpTest.project  main.cpp
Tests/DataOpTest/data/: _.h
Tests/DataOpTest/operation/: _.h
Tests/LayerTest/: LayerTest.project  main.cpp
Tests/LayerTest/principal/: _.h
Tests/OtherTests/: OtherTests.mk  OtherTests.project  main.cpp
Tests/OtherTests/model/param_initializer/: param_initializer.cpp  test_constant_filler.cpp  test_gaussian_filler.cpp  test_param_initializer.cpp  test_uniform_filler.cpp  test_var_scale_filler.cpp
Tests/OtherTests/policies/: _.h  test_policy_operations.cpp
